--- a/index.html
+++ b/index.html
@@ -47,5 +47,20 @@
         <div class=" h-50 w-2/6 bg-purple-500 border border-4 border-green-400 m-5">Item 22</div>
         <div class=" h-50 w-2/6 bg-purple-500 border border-4 border-green-400 m-5">Item 33</div>
     </section>
+
+    <section class="grid lg:grid-cols-4 text-2xl gap-x-5 gap-y-2 m-20 text-center text-white">
+        <div class="bg-pink-500 text-5xl ">Box-11</div>
+        <div class="bg-pink-500 text-5xl">Box-12</div>
+        <div class="sm:col-span-2 bg-pink-500 text-5xl">Box-13</div>
+        <div class="bg-pink-500 text-5xl">Box-14</div>
+        <div class="sm:col-span-4 bg-pink-500 text-5xl">Box-15</div>
+        <div class="bg-pink-500 text-5xl">Box-16</div>
+        <div class="md:row-span-2 bg-pink-500 text-5xl">Box-17</div>
+        <div class="bg-pink-500 text-5xl">Box-18</div>
+        <div class="bg-pink-500 text-5xl">Box-19</div>
+        <div class="bg-pink-500 text-5xl">Box-10</div>
+        <div class="bg-pink-500 text-5xl">Box-00</div>
+        <div class="lg:row-span-4 bg-pink-500 text-5xl">Box-20</div>
+    </section>
 </body>
 </html>
